<resources>
    <string name="app_name">ChallengeOnAirAndroid</string>
    <string name="backward">뒤로가기</string>
    <string name="history">기록</string>
    <string name="history_date">8.23(목)</string>
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="made">내가 만든</string>
    <string name="challenge_title">[독서 챌린지] 방처음파본다...</string>
    <string name="clock_image">시계 이미지</string>
    <string name="start_time">10:30</string>
    <string name="tilde">~</string>
    <string name="end_time">11:00</string>
    <string name="dot">•</string>
    <string name="read_book">독서</string>
    <string name="fee">참여비</string>
    <string name="fee_30">300</string>
    <string name="refunds">P / 환급금</string>
    <string name="refunds_400">400</string>
    <string name="points">P</string>
    <string name="search_description">SearchActivity로 전환</string>
    <string name="home_description">HomeActivity로 전환</string>
    <string name="user_profile_description">사용자 프로필</string>
    <string name="user_name">홍길동</string>
    <string name="my_profile">내 프로필</string>
    <string name="point">포인트</string>
    <string name="point_value">8,000 P</string>
    <string name="point_description">PointActivity로 전환</string>
    <string name="history_description">MyPageHistoryActivity로 전환</string>
    <string name="try_challenge">도전</string>
    <string name="try_challenge_value">5</string>
    <string name="success_challenge">성공</string>
    <string name="success_challenge_value">4</string>
    <string name="my_created_challenge">내가 만든</string>
    <string name="my_creaated_challenge_value">1</string>
    <string name="waiting_challenge">대기 중인 챌린지</string>
    <string name="waiting_challenge_value">3</string>
    <string name="customer_service">고객 센터</string>
    <string name="frequently_asked_question">자주 묻는 질문</string>
    <string name="contact_us">문의하기</string>
    <string name="user_setting">사용자 설정</string>
    <string name="delete_accout">탈퇴하기</string>
    <string name="log_out">로그아웃</string>
    <string name="challenge_image_descriptio">챌린지 이미지</string>
    <string name="my_created_banner">내가 만든</string>
    <string name="challenge_title_example">[챌린지이름] 하하하하</string>
    <string name="challenge_image_description">챌린지 이미지</string>
    <string name="challenge_step1">1</string>
    <string name="challenge_step2">2</string>
    <string name="create_challenge">챌린지 생성하기</string>
    <string name="select_challenge_category">원하는 카테고리를 선택해주세요</string>
    <string name="category_exercise">운동</string>
    <string name="category_development">자기계발</string>
    <string name="category_hobby">취미</string>
    <string name="category_study">공부</string>
    <string name="input_challenge_title">챌린지 제목을 입력해주세요</string>
    <string name="edittext_placeholder">자유롭게 남겨주세요</string>
    <string name="input_challenge_body">챌린지 내용과 인증방식을 공유해주세요</string>
    <string name="set_challenge_min">챌린지 최소 인원을 설정해주세요</string>
    <string name="set_challenge_max">챌린지 최대 인원을 설정해주세요</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="min_num">1명</string>
    <string name="max_num">4명</string>
    <string name="set_challenge_image">이미지를 설정해주세요</string>
    <string name="previous_button">이전</string>
    <string name="next_button">다음</string>
    <string name="set_start_time">시작 시간을 설정해주세요</string>
    <string name="start_time_button">시작 시간</string>
    <string name="complete_setting_button">설정 완료</string>
    <string name="end_time_button">종료 시간</string>
    <string name="set_point_button">요금 설정</string>
    <string name="set_point">원하는 포인트를 설정해주세요</string>
    <string name="current_point">현재 잔액 포인트 : 1000 P</string>res
</resources>