<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChallengeThumbnail"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvChallengeName">

        <RelativeLayout
            android:id="@+id/rlChallengeThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ivChallengeImg : 챌린지 사진 url -->
            <ImageView
                android:id="@+id/ivChallengeImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sample_challenge_thumbnail"
                android:scaleType="centerCrop"
                android:contentDescription="@string/challenge_image_descriptio" />

            <!-- tvMyCreatedBanner : 내가 만든 챌린지 배너 -->
            <TextView
                android:id="@+id/tvMyCreatedBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/gray_transparent"
                android:gravity="start|top"
                android:text="@string/my_created_banner"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!-- tvChallengeName : 챌린지 이름 데이터 값 -->
    <TextView
        android:id="@+id/tvChallengeName"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/challenge_title_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvChallengeThumbnail"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
